--- a/css/styles.css
+++ b/css/styles.css
@@ -164,22 +164,22 @@ body.acse {
           background-size: 49px 18px;
           }*/ }
     .menus h3.general {
-      color: #d35136; }
+      color: #4dd6b9; }
       .menus h3.general:before {
         width: 17px;
         background-position: 0px 0px; }
     .menus h3.Voile {
-      color: #088ecc; }
+      color: #4dd6b9; }
       .menus h3.Voile:before {
         width: 17px;
         background-position: -17px 0px; }
     .menus h3.Evenements {
-      color: #b3b527; }
+      color: #4dd6b9; }
       .menus h3.Evenements:before {
         width: 17px;
         background-position: -17px 0px; }
     .menus h3.contact {
-      color: #27b599; }
+      color: #4dd6b9; }
       .menus h3.contact:before {
         width: 17px;
         background-position: -34px 0px; }
