--- a/css/styles.css
+++ b/css/styles.css
@@ -133,10 +133,41 @@ body.acse {
 .menus {
   text-align: left;
   height: 100%;
-  width: 100%; }
+  width: 100%; 
+
+}
   @media screen and (min-width: 760px) {
     .menus {
       padding: 20px 30px; } }
+
+  .menus h2 {
+    text-transform: uppercase;
+    font-size: 120%;
+    font-weight: normal;
+    padding-left: 0px;
+    cursor: pointer;
+    width: 100%;
+    margin: 20px 110px 10px; }
+    @media screen and (min-width: 360px) {
+      .menus h2 {
+        margin: 20px auto 20px; } }
+    @media screen and (min-width: 760px) {
+      .menus h2 {
+        margin: 20px 0 10px 0; } }
+    .menus h2:before {
+      content: "";
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      height: 18px;
+      display: block;
+      background: url(../images/nav-h-icons.png) no-repeat;
+      background-position: 0px 0px;
+      /*@media screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-device-pixel-ratio: 2) {
+          background: url(../images/nav-sprite@2x.png) no-repeat;
+          background-size: 49px 18px;
+          }*/ }
+
   .menus h3 {
     text-transform: uppercase;
     font-size: 120%;
