--- a/css/styles.css
+++ b/css/styles.css
@@ -662,7 +662,8 @@ body.acse {
       padding: 20px;
       border-left: 1px solid #dedede;
       text-align: center;
-      height: 100%;
+      height: 10%;
+      opacity: 1;
       /*.photo {
           height: 80%;
           width: 100%;
@@ -673,20 +674,19 @@ body.acse {
           }*/ 
         }
       @media screen and (min-width: 760px) {
-        .content .content-item .content-image, .content .content-item .content-video {
-          float: left;
-          width: 50%; } }
-      .content .content-item .content-image img, .content .content-item .content-video img {
+
+                .content .content-item .content-image img, .content .content-item .content-video img {
         width: auto;
-        height: auto;
+        opacity: 1;
         max-width: 50%;
-        max-height: 80%;
+        height: 80%;
         margin-left: auto;
         margin-right: auto;
-        box-shadow: 0px 0px 5px black;
+        box-shadow: 0px 0px 5px green;
         position: fixed;
         right: 2%;
-        top: 100px;
+        top: 10%;
+
  }
     .content .content-item .content-video {
       display: none; }
@@ -879,6 +879,9 @@ input, textarea {
 
 
 }
+
+
+
 #foot_wrap {
   background: #fff;
   width: 950px;
