--- a/css/styles.css
+++ b/css/styles.css
@@ -682,7 +682,7 @@ body.acse {
         height: 80%;
         margin-left: auto;
         margin-right: auto;
-        box-shadow: 0px 0px 5px green;
+        box-shadow: 0px 0px 5px black;
         position: fixed;
         right: 2%;
         top: 10%;
