--- a/css/styles.css
+++ b/css/styles.css
@@ -529,6 +529,7 @@ body.acse {
             -moz-transform: translateY(0px);
             transform: translateY(0px); }
 
+
    .content .content-item .content-info .description .resultat, .content .content-item .content-info .description .service, .content .content-item .content-info .description .day {
           transition: color 0.4s ease;
           color: #5e5e5e; }
@@ -648,21 +649,74 @@ body.acse {
           left: -29px;
           top: 3px;
           z-index: 2; }
+
       .content .content-item .content-info img {
-        -webkit-transition-property: opacity;
-        -webkit-transition-duration: 0.5s;
-        transition-property: opacity;
-        transition-duration: 0.5s;
         border: 1px solid #c4c4c4;
-        opacity: 0.4;
+        opacity:1;
         max-height: 600px; }
-        .content .content-item .content-info img:hover {
-          opacity: 1.0; }
+
+
     .content .content-item .content-image, .content .content-item .content-video {
       padding: 20px;
       border-left: 1px solid #dedede;
       text-align: center;
-      height: 100%;
+      height: 1%;}
+
+    .content .content-item .content-image img, .content .content-item .content-video img {
+        width: 1px;
+        height: 1px;
+        max-width: 1px;
+        margin-left: 1px;
+        margin-right: 1px;
+              opacity: 1;
+      /*.photo {
+          height: 80%;
+          width: 100%;
+          margin-left: auto;
+          margin-right: auto;
+          background: url(../images/photos/grp-membres.jpg) no-repeat;        
+          background-size: contain;
+          }*/ 
+        }
+      @media screen and (min-width: 760px) {
+
+              .content .content-item .content-info img {
+        border: 1px solid #c4c4c4;
+        opacity:0;
+        max-height: 600px; }
+
+        .content .content-item .content-image, .content .content-item .content-video {
+          float: left;
+          width: 50%; 
+          }
+      .content .content-item .content-image img, .content .content-item .content-video img {
+        width: auto;
+        height: auto;
+        max-width: 60%;
+        max-height: 80%
+        margin-left: auto;
+        margin-right: auto;
+        box-shadow: 0px 0px 5px black;
+        position: fixed;
+        right: 2%;
+        top: 20%;
+      opacity: 1;
+    }
+  }
+
+
+    .content .content-item .content-image2 img, .content .content-item .content-video img {
+
+
+                      width: auto;
+        height: 100%;
+        max-width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        box-shadow: 0px 0px 5px black;
+        position: fixed;
+        right: 2%;
+        top: 40%;
       opacity: 1;
       /*.photo {
           height: 80%;
@@ -674,23 +728,21 @@ body.acse {
           }*/ 
         }
       @media screen and (min-width: 760px) {
-        .content .content-item .content-image, .content .content-item .content-video {
+        .content .content-item .content-image2, .content .content-item .content-video {
           float: left;
           width: 50%; 
-          } }
-      .content .content-item .content-image img, .content .content-item .content-video img {
-        width: auto;
-        height: auto;
-        max-width: 50%;
-        max-height: 80%;
-        margin-left: auto;
-        margin-right: auto;
-        box-shadow: 0px 0px 5px black;
-        position: fixed;
-        right: 2%;
-        top: 100px;
-      opacity: 1;
- }
+          }
+      .content .content-item .content-image2 img, .content .content-item .content-video img {
+        width: 1px;
+        height: 1px;
+        max-width: 1px;
+        margin-left: 1px;
+        margin-right: 1px;
+              opacity: 1;
+    }
+  }
+
+
     .content .content-item .content-video {
       display: none; }
       .content .content-item .content-video .banniere {
